<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/choose_cert_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/choose_cert_textView" />

    <RadioGroup
        android:id="@+id/radio_certs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/radio_valid_cert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/choose_cert_valid_cert" />

        <RadioButton
            android:id="@+id/radio_own_cert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_cert_own_cert" />

        <RadioButton
            android:id="@+id/radio_no_cert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_cert_no_cert" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_cert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_certs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/choose_cert_button" />

</RelativeLayout>
