<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/mainpage_text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mainpage_top" />

    <TextView
        android:id="@+id/mainpage_text_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainpage_text_top"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:text="@string/mainpage_next" />
    
    <EditText
        android:id="@+id/editText_Host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainpage_text_next"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginTop="40dp"
        android:hint="@string/host_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Host"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginTop="40dp"
        android:hint="@string/port_hint"
        android:ems="10" />

    <Button
        android:id="@+id/mainpage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/mainpage_button" />

    

</RelativeLayout>
