<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/ciphersuites_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/ciphersuites_textView" />

    <TextView
        android:id="@+id/ciphersuites_textView_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ciphersuites_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/ciphersuites_textView_caution" />

    <EditText
        android:id="@+id/ciphersuites_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ciphersuites_textView_caution"
        android:layout_alignRight="@+id/ciphersuites_textView_caution"
        android:layout_below="@+id/ciphersuites_textView_caution"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/ciphersuites_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ciphersuites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ciphersuites_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/ciphersuites_button" />

</RelativeLayout>
